# echo-input

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  PKGBUILD  README.md
.agents/skills/architecture/: SKILL.md
.agents/skills/performance/: SKILL.md
.agents/skills/rust/: SKILL.md
.agents/skills/ui/: SKILL.md
.agents/skills/wayland/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: echoinput.rb
echoinput/: Cargo.toml
echoinput/src/: main.rs
echoinput/wix/: main.wxs
input-core/: Cargo.toml
input-core/src/: config.rs  events.rs  ipc.rs  key_resolver.rs  keys.rs  lib.rs  overlay.rs  presets.rs  processor.rs  traits.rs
overlay/: Cargo.toml
overlay-wayland/: Cargo.toml
overlay-wayland/src/: animation.rs  keymap_compat.rs  lib.rs  renderer.rs
overlay/src/: lib.rs
packaging/winget/: echoinput.yaml
platform-linux/: Cargo.toml
platform-linux/examples/: capture_test.rs
platform-linux/src/: evdev_capture.rs  keymap.rs  lib.rs
platform-linux/src/overlay_wayland/: error.rs  renderer.rs
platform-linux/src/overlay_x11/: mod.rs
platform-macos/: Cargo.toml
platform-macos/src/: lib.rs
platform-macos/src/overlay/: mod.rs
platform-windows/: Cargo.toml
platform-windows/src/: lib.rs
platform-windows/src/overlay/: mod.rs
settings/src/tabs/: general.rs
tauri-app/: Cargo.toml
tauri-app/src/: main.rs
wayland-app/: Cargo.toml
wayland-app/src/: main.rs
