[package]
name = "tauri-app"
description = "EchoInput overlay application"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tauri-app"
path = "src/main.rs"

[dependencies]
input-core = { path = "../input-core" }
platform-linux = { path = "../platform-linux" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
eframe = { workspace = true }
